# pyTorch-Robotics

./: .gitignore  CMakeLists.txt  README.md
data/: GRFDatasets.csv
model/: Model1.pt  Model2.pt
regression/: CMakeLists.txt  main.cpp  regression_GRF.cpp
regression/RegressionUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
